--- a/views/dbHome.pug
+++ b/views/dbHome.pug
@@ -2,11 +2,14 @@ html
   title DataBases 
   //- Bootstrap
   link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
-  link(rel="stylesheet", href="/index.css")
+  link(rel="stylesheet", href="/dbHome.css")
   body 
     div.app-wrapper 
       div.header 
-        div(style="font-size: 25px") Motaka Databases
+        div.header-1 Motaka Databases
+        div.header-2 
+          form(action="/test") 
+            button(type="submit") Test Home
 
       div.nav
         form(action="/test/dbs/users") 
@@ -55,7 +58,6 @@ html
                 newDataDiv.innerHTML = eachData
                 newDataDiv.classList.add('content-data')
                 rightDiv.appendChild(newDataDiv)
-                console.log(rightDiv)
 
             - temp = !temp
         
