--- a/public/dbHome.css
+++ b/public/dbHome.css
@@ -76,7 +76,7 @@ button {
   width: 180px;
 }
 
-.dbDescription {
+.description {
   text-align: center;
   background-color: rgba(77, 68, 68, 0.795);
   border: 1px solid wheat;
