--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -1,5 +1,5 @@
 html 
-  title DataBases 
+  title Requests Info 
   //- Bootstrap
   link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
   link(rel="stylesheet", href="/requestsInfo.css")
@@ -8,18 +8,22 @@ html
       div.header 
         div.header-1 Motaka API Requests Info 
         div.header-2 
-          form(action="/test") 
-            button(type="submit") Test Home 
+          form(action="/help") 
+            button(type="submit") Main 
 
       div.nav
-        form(action="/test/requestsInfo/Grisha" method="get") 
+        form(action="/help/requestsInfo/about" method="get") 
+          button(type="submit") About requests
+
+        form(action="/help/requestsInfo/Grisha" method="get") 
           button(type="submit") Grisha
 
-        form(action="/test/requestsInfo/Mamikon" method="get") 
+        form(action="/help/requestsInfo/Mamikon" method="get") 
           button(type="submit") Mamikon
         
       div.content 
-        h4.dbDescription= message
+        h4.description= message
 
-        div.left#left-content  hello
-        div.right#right-content hi
+        div.content-data  hello world                      
+        div.content-data  hello world
+
