--- a/views/testHome.pug
+++ b/views/testHome.pug
@@ -1,5 +1,5 @@
 html
-  title DataBases
+  title Motaka
   //- Bootstrap
   link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
   link(rel="stylesheet", href="/testHome.css")
@@ -8,14 +8,51 @@ html
       div.header
         div(style="font-size: 25px") Motaka Helper
 
-      div.content
-        div.content-header
-          h4.dbDescription= message
+      div.content 
+        //- URIs
+        div.content-uris
+          h4.content-uris-header Back-end and Front-end URIs
 
-        div.content-data
-          form(action="/test/dbs/all")
-            button(type="submit") Databases
+          div.content-uris-data
+              //- Back-end
+              div.uris-data-left  Back -end URI
+              input(type="text" value="https://motaka.herokuapp.com/" id="backUri" disabled)
+              script.
+                function copyBackUrl() {
+                  let copyText = document.getElementById("backUri")
+                  copyText.select()
+                  copyText.setSelectionRange(0, 99999) /* For mobile devices */
+                  navigator.clipboard.writeText(copyText.value)
+                }
 
-          form(action="/test/requestsInfo/all" method="get")
-            button(type="submit") Requests Info
+              div.uris-data-right
+                button(onclick="copyBackUrl()" title="Back-end").copy-btn Copy URI
+              //- Back-end finish
+              
+              //- Front-end
+              br
+              hr
+              div.uris-data-left Front-end URI
+              input(type="text" value="http://motaka.xyz/" id="frontUri" disabled)
+              script.
+                function copyFrontUrl() {
+                  let copyText = document.getElementById("frontUri")
+                  copyText.select()
+                  copyText.setSelectionRange(0, 99999) /* For mobile devices */
+                  navigator.clipboard.writeText(copyText.value)
+                }
+
+              div.uris-data-right
+                button(onclick="copyFrontUrl()" title="Front-end").copy-btn Copy URI
+              //- Front-end finish
+            
+        //- Helper
+        div.content-buttons
+          h4.content-buttons-header Available Helper Routes
+          div.content-buttons-data
+            form(action="/help/dbs/all")
+              button(type="submit") Databases
+
+            form(action="/help/requestsInfo/all" method="get")
+              button(type="submit") API Requests Info
 
