--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -22,7 +22,7 @@ html
           button(type="submit") Mamikon
 
         form(action="/help/requestsInfo/helperRequests" method="get") 
-          button(type="submit") Helper Requests
+          button(type="submit") Help Requests
         
       div.content 
         h4.description= message
