--- a/public/helpHome.css
+++ b/public/helpHome.css
@@ -2,7 +2,6 @@ body {
   background-color: rgba(2, 1, 1, 0.932);
 }
 
-/* GRID */
 .app-wrapper {
   display: grid;
 
@@ -15,6 +14,7 @@ body {
   grid-gap: 6px;
 }
 
+/* Header */
 .header {
   grid-area: header;
   background-color: rgba(77, 68, 68, 0.26);
@@ -23,6 +23,7 @@ body {
   padding: 14px 14px;
 }
 
+/* Content */
 .content {
   grid-area: content;
   grid-row: 3 / 4;
@@ -60,13 +61,13 @@ body {
   float: right;
 }
 
+/* Inputs */
 input {
   /* margin-left: 15px; */
   text-align: center;
   width: 700px;
 }
 
-/* ==================================== */
 button {
   width: 230px;
 }
