--- a/public/requestsInfo.css
+++ b/public/requestsInfo.css
@@ -2,7 +2,6 @@ body {
   background-color: rgba(2, 1, 1, 0.932);
 }
 
-/* GRID */
 .app-wrapper {
   display: grid;
 
@@ -15,6 +14,7 @@ body {
   grid-gap: 6px;
 }
 
+/* Header */
 .header {
   grid-area: header;
   background-color: rgba(77, 68, 68, 0.26);
@@ -32,6 +32,7 @@ body {
   float: right;
 }
 
+/* Navbar */
 .nav {
   grid-area: nav;
   grid-row: 3;
@@ -44,6 +45,7 @@ body {
   display: block;
 }
 
+/* Content */
 .content {
   grid-area: content;
   grid-row: 3 / 4;
@@ -55,8 +57,6 @@ body {
   padding: 4px 10px 4px 10px;
 }
 
-/* ==================================== */
-
 .content-data {
   border: 2px solid rgba(255, 255, 255, 0.308);
   margin: 8px;
@@ -65,10 +65,12 @@ body {
   font-size: 18px;
 }
 
+/* Buttons */
 button {
   width: 180px;
 }
 
+/* Descriptions */
 .description {
   text-align: center;
   background-color: rgba(77, 68, 68, 0.795);
