Fixed validations and file names

--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -128,7 +128,7 @@ html
           //- Create new job [BLACK]                
           div.content-data(style="color: black") 
             div Description [&&] ==> Create new job 
-            div URI ==> [AUTH]URI/home/new_job
+            div URI ==> [AUTH]URI/job
             div Have access ==> [USER]
             div Request Method ==> 
               span(style="color: black") [POST] 
