Changed file names

--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -125,17 +125,17 @@ html
             div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
             div }
           
-          //- Get job data with ID
+          //- Get job data with ID [BLACK]
           div.content-data(style="color: black") 
             div Description ==> Get data about job with id 
-            div Request URI ==> URI/job/:id
+            div Request URI ==> URI/jobs/:id
             div Request Method ==> 
               span(style="color: black") [GET] 
 
           //- Create new job [BLACK]                
           div.content-data(style="color: black") 
             div Description [&&] ==> Create new job 
-            div Request URI ==> [AUTH]URI/job
+            div Request URI ==> [AUTH]URI/jobs
             div Have access ==> [USER]
             div Request Method ==> 
               span(style="color: black") [POST] 
