Search function work

--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -144,7 +144,10 @@ html
             div &emsp;&emsp;"startDate": "2000-10-21" ,
             div &emsp;&emsp;"startTime": "10:30:00" , 
             div &emsp;&emsp;"duration": "2 week" , 
-            div &emsp;&emsp;"cost": "20000 AMD" ,
+            div &emsp;&emsp;"salary": {
+            div &emsp;&emsp;&emsp;&emsp;"currency": "AMD", // default="AMD"
+            div &emsp;&emsp;&emsp;&emsp;"cost": 15000
+            div &emsp;&emsp;},
             div &emsp;&emsp;"address": "something" , // [?]
             div &emsp;&emsp;"category": "petWalking" ,
             div &emsp;&emsp;"subCategories": ["subCat1", "subCat2"] // [?]
