--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -54,7 +54,9 @@ html
           //- DESCRIPTION COMMENT &&
           div.content-data If description ends with [&&] ==> still in progress
 
-          //- 
+          //- GTE and LTE
+          div.content-data gte ==> greater than or equal to
+          div.content-data lte ==> less than or equal to
 
 
 
@@ -126,11 +128,15 @@ html
             div }
           
           //- Get job data with ID [BLACK]
-          div.content-data(style="color: black") 
+          div.content-data(style="color: red") 
             div Description ==> Get data about job with id 
-            div Request URI ==> URI/jobs/:id
+            div Request URI ==> [AUTH]URI/jobs/:id
             div Request Method ==> 
               span(style="color: black") [GET] 
+
+            div Request Headers ==> {
+            div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
+            div }
 
           //- Create new job [BLACK]                
           div.content-data(style="color: black") 
@@ -157,7 +163,25 @@ html
             div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
             div }
 
+          //- Get all jobs from DB with advanced search and pagination [BLACK]
+          div.content-data(style="color: black")
+            div Description [&&] ==> Get all jobs from DB with advanced search and pagination
+            div Request URI ==> [AUTH]URI/jobs
+            div Request Query ( URI/jobs?key1=value1&k2=v2 ) ==> {
+            div &emsp;&emsp;Searching with job salary: salcost[gte]=1000&salcost[lte]=10000
+            div &emsp;&emsp;Pagination and limit: page=1&limit=15
+            div }
+
+            div Request Method ==> 
+              span(style="color: black") [GET] 
+            
+            div Request Headers ==> {
+            div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
+            div }
           
+            div &emsp;
+            div(style="color: black")
+              | Request Example ==> URI/jobs?page=1&limit=3&salcost[gte]=10000&salcost[lte]=40000
 
 
 
@@ -193,6 +217,17 @@ html
             div Request Body [JSON] ==> {
             div &emsp;&emsp;"phone": "+374 ** ******", // [!!]
             div &emsp;&emsp;"confirmCode": "******" 
+            div }
+
+          //- Get all jobs from DB  [BLACK]
+          div.content-data(style="color: black")
+            div Description ==> Get all jobs from DB
+            div Request URI ==> [AUTH]URI/jobs
+            div Request Method ==> 
+              span(style="color: black") [GET] 
+            
+            div Request Headers ==> {
+            div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
             div }
 
 
