--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -183,10 +183,13 @@ html
             div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
             div }
           
-            div &emsp;
-            div(style="color: black") Request Example ==> URI/jobs?page=1&limit=3&salcost[gte]=10000&salcost[lte]=40000
-              br
-            div &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;==> URI/jobs?caties=petWalking&date[gte]=2022-10-25&date[lte]=2023-07-16
+            br
+            div(style="color: black")
+              div Request Example ==> in postman you can use PARAMS section (below request method)
+            
+              div &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;==> URI/jobs?page=1&limit=3&salcost[gte]=10000&salcost[lte]=40000
+
+              div &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;==> URI/jobs?caties=petWalking&date[gte]=2022-10-25&date[lte]=2023-07-16
 
 
 
