--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -130,7 +130,7 @@ html
           //- Get job data with ID [BLACK]
           div.content-data(style="color: red") 
             div Description ==> Get data about job with id 
-            div Request URI ==> [AUTH]URI/jobs/:id
+            div Request URI ==> [AUTH]URI/jobs/:jobId
             div Request Method ==> 
               span(style="color: black") [GET] 
 
