--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -276,7 +276,7 @@ html
 
           //- Get user data with ID [BLACK]
           div.content-data(style="color: black") 
-            div Description [&&] ==> Get data about user with id 
+            div Description ==> Get data about user with id 
             div Request URI ==> [AUTH]URI/users/:userId
             div Request Method ==> 
               span(style="color: black") [GET] 
