Added new dbs in pug

--- a/views/dbHome.pug
+++ b/views/dbHome.pug
@@ -25,6 +25,12 @@ html
 
         form(action="/help/dbs/jobs" method="get") 
           button(type="submit") Jobs
+
+        form(action="/help/dbs/orders" method="get") 
+          button(type="submit") Orders  
+
+        form(action="/help/dbs/comments" method="get") 
+          button(type="submit") Comments  
         
       //- Content ============================
       div.content 
