--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -219,7 +219,7 @@ html
           //- Cancel job
           //- Add new candidate in job
           div.content-data(style="color: black")
-            div Description [&&] ==> Cancel job [det job status 'canceled']
+            div Description [&&] ==> Cancel job [set job status 'canceled']
             div Request URI ==> [AUTH]URI/jobs/:jobId
 
             div Request Method ==> 
